fixed arrow align

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,15 @@ header {
 h2 {
     margin: 30px auto 10px auto;
     font-size: 1.1rem;
+    display: inline-block;
+    vertical-align: 15px;
+}
+
+.arrow {
+    font-size: 2rem;
+    height: 10px;
+    width: 10px;
+    margin-right: 5px;
 }
 
 li {
